--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,8 +1,23 @@
 .header {
    background: #262425;
-   min-height: 60px;
+   height: 60px;
    position: relative;
    display: flex;
    justify-content: flex-start;
    align-items: center;
+   padding: 0 25px;
+   .basket {
+      color: #fff;
+      margin-left: auto;
+      margin-right: 30px;
+   }
+   .burgerWrap {
+      cursor: pointer;
+      margin-right: 15px;
+   }
+   .dropMenu {
+      position: absolute;
+      top: 60px;
+      right: 0;
+   }
 }
