--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,31 +1,29 @@
 .mainBlock {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
-    min-height: 642px;
+    grid-template-columns: 1fr 1fr;    
+    height: 642px;
     .mainSlider {
         height: 100%;
         width: 100%;
         padding: 20px;
-        border: 1px solid #bebebe;
+        border-right: 1px solid #bebebe;
         position: relative;
-        .item {
-            img {
-                border-radius: 10px;
-                width: 100%;
-                height: 100%;
-            }           
-        }
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .mainInfo {
         padding: 25px;
         .mainInfoItem {
             display: flex;
-            margin-bottom: 10px;
-            .infoType {
+            margin-bottom: 15px;
+            font-size: 18px;
+            span {
                 width: 30%;
             }
             .infoTypeClass {
+                width: auto;
                 padding: 3px 10px;
                 background: #ededed;
                 border-radius: 5px;
@@ -33,10 +31,34 @@
             }
         }        
     }
-    .mainColors {
-        padding: 30px 40px;
+    .colorTitle {
+        background: #00B6FF;
+        color: #ffffff;
+        text-align: center;
+        position: relative;
+        font-size: 18px;
+        font-weight: bold;
+        padding: 20px 0;
+        span {
+            position: absolute;
+            left: 0;
+            top: 0;
+            background: #009ad6;
+            text-align: center;
+            width: 61px;
+            line-height: 61px;
+            height: 100%;
+            font-size: 24px;
+            cursor: pointer;
+            &:hover {
+                background: #0077ab;
+            }
+        }
+    }
+    .mainColors {        
+        padding: 30px 80px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-between;        
         .colorItem {
             width: 30%;
             list-style: none;
